# max_vita

./: CMakeLists.txt  LICENSE  README.md  config.c  config.h  error.c  error.h  fios.c  fios.h  hooks.h  imports.c  imports.h  main.c  openal_patch.c  opengl_patch.c  so_util.c  so_util.h  util.c  util.h
cg/: DefaultPixel.txt  DefaultVertex.txt  DynamicPixel.txt  DynamicVertex.txt  HighPassPixel.txt  HighPassVertex.txt  LightmapPixel.txt  LightmapVertex.txt  ParticlePixel.txt  ParticleVertex.txt  RenderBloomPixel.txt  SceneBloomVertex.txt  ScenePixel.txt  SkinnedPixel.txt  SkinnedVertex.txt
cgs/: ParticleVertex.txt  SkinnedPixel.txt
data/maxpayne/cgs/: DefaultPixel.txt  DefaultVertex.txt  DynamicPixel.txt  RenderBloomVertex.txt  SceneBloomPixel.txt  SkinnedVertex.txt
data/maxpayne/data/menu/: menu.txt
data/maxpayne/es2/: DynamicVertex.txt  LightmapPixel.txt
hooks/: fios.h  game.c  io.c  openal.c  opengl.c
sce_sys/livearea/contents/: template.xml
